sql/item.h
@@ -820,6 +820,10 @@ protected:
     return tmp_table_field_from_field_type(table);
   }
   Field *create_tmp_field_int(TABLE *table, uint convert_int_length);
+  Field *tmp_table_field_from_field_type_maybe_null(TABLE *table,
+                                            Tmp_field_src *src,
+                                            const Tmp_field_param *param,
+                                            bool is_explicit_null);
 
   void push_note_converted_to_negative_complement(THD *thd);
   void push_note_converted_to_positive_complement(THD *thd);
@@ -876,6 +880,7 @@ public:
     expressions with subqueries in the ORDER/GROUP clauses.
   */
   String *val_str() { return val_str(&str_value); }
+  virtual Item_func *get_item_func() { return NULL; }
 
   const MY_LOCALE *locale_from_val_str();
 
@@ -2574,7 +2579,20 @@ protected:
   Item_basic_value(THD *thd): Item(thd) {}
 public:
   Field *create_tmp_field_ex(TABLE *table, Tmp_field_src *src,
-                             const Tmp_field_param *param);
+                             const Tmp_field_param *param)
+  {
+
+    /*
+      create_tmp_field_ex() for this type of Items is called for:
+      - CREATE TABLE ... SELECT
+      - In ORDER BY: SELECT max(a) FROM t1 GROUP BY a ORDER BY 'const';
+      - In CURSORS:
+          DECLARE c CURSOR FOR SELECT 'test';
+          OPEN c;
+    */
+    return tmp_table_field_from_field_type_maybe_null(table, src, param,
+                                            type() == Item::NULL_ITEM);
+  }
   bool eq(const Item *item, bool binary_cmp) const;
   const Type_all_attributes *get_type_all_attributes_from_const() const
   { return this; }
@@ -2915,7 +2933,6 @@ class Item_name_const : public Item_fixed_hybrid
 {
   Item *value_item;
   Item *name_item;
-  bool valid_args;
 public:
   Item_name_const(THD *thd, Item *name_arg, Item *val);
 
@@ -2948,7 +2965,8 @@ public:
         DECLARE c CURSOR FOR SELECT NAME_CONST('x','y') FROM t1;
         OPEN c;
     */
-    return create_tmp_field_ex_simple(table, src, param);
+    return tmp_table_field_from_field_type_maybe_null(table, src, param,
+                                              type() == Item::NULL_ITEM);
   }
   int save_in_field(Field *field, bool no_conversions)
   {
