sql/item_func.h
@@ -393,6 +393,7 @@ public:
 
   bool with_sum_func() const { return m_with_sum_func; }
   With_sum_func_cache* get_with_sum_func_cache() { return this; }
+  Item_func *get_item_func() { return this; }
 };
 
 
